packages/store/kustomize/overlays/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-store
  labels:
    app: next-store
spec:
  replicas: 3
  revisionHistoryLimit: 3
  template:
    spec:
      containers:
        - name: next-store
          resources:
            limits:
              cpu: 200m
              memory: 1200Mi
            requests:
              cpu: 100m
              memory: 600Mi
