packages/store/kustomize/overlays/staging/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: next-store-virtualservice
  namespace: default
spec:
  gateways:
  - unleash-gateway
  hosts:
  - "*.stage.meepcloud.com"
